dataset1235/2025-2/2947369575/users/2826236660/executions/1003782500_704983377.log
== SUBMISSION (2025-08-27 22:36:26)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y:"))
DI = x // y
RDI = x % y
DR = x / y
M = x * y
PY = y ** 3
print(DI)
print(RDI)
print(DR)
print(M)
PRINT(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:34:56)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
PRINT(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:36:49)
-- CODE: 
x = int(input("Valor de x:"))
y = int(input("Valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
PRINT(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:41:54)
-- CODE: 
x = int(input("Valor de x:"))
y = int(input("Valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
print(PY)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:37:17)
-- CODE: 
x = int(input("Valor de x:"))
y = int(input("Valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
print(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:41:32)
-- CODE: 
x = int(input("Valor de x:"))
y = int(input("Valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
print(PY)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:41:57)
-- CODE: 
x = int(input("Valor de x:"))
y = int(input("Valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
print(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:33:14)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
valor de x:valor de y
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
valor de x:valor de y
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
valor de x:valor de y
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
valor de x:valor de y
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
valor de x:valor de y
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
valor de x:valor de y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:35:59)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
PRINT(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:33:30)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
valor de x:valor de y
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
valor de x:valor de y
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
valor de x:valor de y
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
valor de x:valor de y
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
valor de x:valor de y
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
valor de x:valor de y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:34:54)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
PRINT(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:39:54)
-- CODE: 
x = int(input("Valor de x:"))
y = int(input("Valor de y:"))
DI = x//y
rDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
print(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(RDI)
          ^^^
NameError: name 'RDI' is not defined. Did you mean: 'rDI'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(RDI)
          ^^^
NameError: name 'RDI' is not defined. Did you mean: 'rDI'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(RDI)
          ^^^
NameError: name 'RDI' is not defined. Did you mean: 'rDI'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(RDI)
          ^^^
NameError: name 'RDI' is not defined. Did you mean: 'rDI'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(RDI)
          ^^^
NameError: name 'RDI' is not defined. Did you mean: 'rDI'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(RDI)
          ^^^
NameError: name 'RDI' is not defined. Did you mean: 'rDI'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:33:38)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
valor de x:valor de y
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
valor de x:valor de y
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
valor de x:valor de y
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
valor de x:valor de y
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
valor de x:valor de y
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
valor de x:valor de y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:37:10)
-- CODE: 
x = int(input("Valor de x:"))
y = int(input("Valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
print(PY)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:35:55)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
PRINT(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:41:33)
-- CODE: 
x = int(input("Valor de x:"))
y = int(input("Valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
print(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:40:07)
-- CODE: 
x = int(input("Valor de x:"))
y = int(input("Valor de y:"))
DI = x//y
rDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(rDI)
print(DR)
print(M)
print(PY)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:35:54)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
PRINT(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:33:37)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
valor de x:valor de y
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
valor de x:valor de y
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
valor de x:valor de y
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
valor de x:valor de y
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
valor de x:valor de y
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
valor de x:valor de y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:35:57)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y:"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
PRINT(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:34:59)
-- CODE: 
x = int(input("valor de x:"))
y = int(input("valor de y"))
DI = x//y
RDI = x%y
DR = x/y
M = x*y
PY = y**3
print(DI)
print(RDI)
print(DR)
print(M)
PRINT(PY)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    PRINT(PY)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
